k3s/sysadmin/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sysadmin-ingress-http
  namespace: sysadmin
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`gitea.local.io`)
      services:
        - kind: Service
          name: gitea
          port: 80
          scheme: http
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sysadmin-ingress-https
  namespace: sysadmin
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`unifi.local.io`)
      services:
        - kind: Service
          name: unifi-clusterip
          port: 443
          scheme: https
          serversTransport: skipverify
  tls: {}
